--- a/res/drawable/ic_allapps_search.xml
+++ b/res/drawable/ic_allapps_search.xml
@@ -17,7 +17,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="?android:attr/textColorSecondary"
+    android:tint="?attr/allAppsSearchTextColor"
     android:autoMirrored="true">
     <path
         android:fillColor="#FF000000"
