Launcher3: Allow hiding top shadow on statusbar
On certain devices (especially amoled) with certain
black-themed wallpapers, it looks quite bad. Add a
toggle to disable it, inspired from lawnchair:

https://github.com/LawnchairLauncher/lawnchair/commit/c99e61205cc4d5b5d3d9b827787c9fd873616060
https://github.com/LawnchairLauncher/lawnchair/commit/e41e27a4d11e7f8352a3d2fa74afb04e8af9354a

Sahil: Fix for a14 QPR1

Co-authored-by: Suphon Thanakornpakapong <paphonb@gmail.com>
Change-Id: I26e2fd8097d8b4855cbd2e433f7893fe240af6dd
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: Mohammad Hasan Keramat J <ikeramat@protonmail.com>
Signed-off-by: SahilSonar <sss.sonar2003@gmail.com>

--- a/res/values/aospa_strings.xml
+++ b/res/values/aospa_strings.xml
@@ -57,4 +57,7 @@
     <!-- DT2S -->
     <string name="pref_sleep_gesture_title">Double tap to sleep</string>
     <string name="pref_sleep_gesture_summary">Double tap on empty space for screen off</string>
+
+    <!-- Top shadow -->
+    <string name="show_top_shadow">Top shadow</string>
 </resources>
