Launcher3: Add kill action to app shortcuts popup
Squashed:

Launcher3: Dismiss task from recents when killed

Change-Id: I25f37484a444346bf08e6960893892cc4bf25ada

Launcher3: Add FORCE_STOP_PACKAGES permission

Change-Id: I20dd0287c47269ccfdd02a8eae2a3da1de96e206

Launcher3: Update kill app button drawable

Change-Id: Iff78ae0528b8ed9c7b11952352e4b6d43507e233

[ghostrider-reborn: Add privapp permissions, adapt to Sv2]
[jhonboy121: adapt to A13]
[MLZ94: update shortcut logic after QPR1]

Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: Pranav <npv12@iitbbs.ac.in>
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Signed-off-by: MLZ94 <zugutoroberto@gmail.com>
Change-Id: If6cce8cfb91a5efe1c99b795d58ed1fba4f706e4
Co-authored-by: Ali B <abittin@gmail.com>
Co-authored-by: Pranav Vashi <neobuddy89@gmail.com>
Co-authored-by: Alexandru Scurtu <sasha.scurtu@gmail.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: Mohammad Hasan Keramat J <ikeramat@protonmail.com>
Signed-off-by: SahilSonar <sss.sonar2003@gmail.com>
Signed-off-by: Saalim Quadri <danascape@gmail.com>
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

--- a/res/values/aospa_strings.xml
+++ b/res/values/aospa_strings.xml
@@ -60,4 +60,8 @@
 
     <!-- Top shadow -->
     <string name="show_top_shadow">Top shadow</string>
+
+    <!-- Kill App recents action shortcut -->
+    <string name="recent_task_option_kill_app">Force Close</string>
+    <string name="recents_app_killed">App Closed</string>
 </resources>
