Launcher3: Add toggle to use two lines for app label
Change-Id: I40c11b04995649611c215de3cf1955dd86a45f3f
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/values/lineage_strings.xml
+++ b/res/values/lineage_strings.xml
@@ -56,4 +56,7 @@
     <!-- App suggestions -->
     <string name="pref_suggestions_title">Suggestions</string>
     <string name="pref_suggestions_summary">For app drawer &amp; home screen suggestions</string>
+
+    <!-- App label -->
+    <string name="icon_two_lines_title">Use two lines for app label</string>
 </resources>
