--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -77,6 +77,13 @@
         <intent android:action="android.settings.ACTION_CONTENT_SUGGESTIONS_SETTINGS" />
     </androidx.preference.PreferenceScreen>
 
+    <SwitchPreferenceCompat
+        android:key="pref_enable_two_line_toggle"
+        android:title="@string/icon_two_lines_title"
+        android:defaultValue="false"
+        android:persistent="true"
+        launcher:iconSpaceReserved="false"
+
     <SwitchPreference
         android:key="pref_allapps_themed_icons"
         android:title="@string/pref_themed_icons_title"
