--- a/quickstep/res/layout/overview_actions_container.xml
+++ b/quickstep/res/layout/overview_actions_container.xml
@@ -39,6 +39,7 @@
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_screenshot"
             android:text="@string/recents_screenshot_title"
+            android:textColor="@android:color/white"
             android:theme="@style/ThemeControlHighlightWorkspaceColor" />
 
         <Space
@@ -70,6 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/recents_lens_title"
+            android:textColor="@android:color/white"
             android:theme="@style/ThemeControlHighlightWorkspaceColor"
             android:visibility="gone" />
 
@@ -86,6 +88,7 @@
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_clear_all"
             android:text="@string/recents_clear_all_title"
+            android:textColor="@android:color/white"
             android:theme="@style/ThemeControlHighlightWorkspaceColor" />
         <Space
             android:layout_width="0dp"
