--- a/quickstep/res/values/colors.xml
+++ b/quickstep/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="all_apps_label_text_dark">#61FFFFFF</color>
     <color name="all_apps_prediction_row_separator">#3c000000</color>
     <color name="all_apps_prediction_row_separator_dark">#3cffffff</color>
+    <color name="nt_overview_button_highlight_color">@color/background_floating_material_dark</color>
 
     <!-- Taskbar -->
     <color name="taskbar_nav_icon_selection_ripple">#E0E0E0</color>
